Minor improvement to error messages in case when no seeds have been provided.  Fix unit test .cfg file.

--- a/test/testRandomService2.cfg
+++ b/test/testRandomService2.cfg
@@ -7,7 +7,7 @@ process TEST2 = {
   // Use as input a file that contains the stored random engine
   // states.
   source = PoolSource {
-    untracked vstring fileNames = {"testRandomService1.root"}
+    untracked vstring fileNames = {"file:testRandomService1.root"}
 
     // For example, say you are interested in reproducing the process for
     // the third event without wasting time to reprocess the rest.
