Use new parameters in StreamThingProducer to mask the top 8 bits in each data word to zero so that compression will be able to compress the file.  Add some comments

--- a/test/testRandomFilter.cfg
+++ b/test/testRandomFilter.cfg
@@ -1,3 +1,9 @@
+
+# Define a job that produces some fake data useful for
+# repacker testing. The output is in Streamer format.
+
+# Original Author   W. David Dagenhart    27 March 2007
+
 process HLT = {
 
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
@@ -6,20 +12,54 @@ process HLT = {
     untracked bool wantSummary = true
   }
 
-  # ~1.9 GB output file = 1.5 MB events x 1270 events
-  # At least in my tests on one machine, the streamer output
-  # module crashes when the output file reaches about 2 GB.
-  # So this may not work if the number of events is larger.
-  # I did not debug this yet and figure out the cause of the crash.
+  # ~2.0 GB output file = 1.5 MB per event x 1270 events
+  # The actual output file size is closer to 1.7 GB because
+  # of compression.
+  # Originally we wanted 3 GB files and eventually need to
+  # increase the size to that.
+  # ~3.0 GB output file = 1.5 MB events x 2290 events x 0.87,
+  # where 0.87 is the compression factor empirically measured
+  # for this fake data.  There are two problems with this.
+  # 1.  On machines that are not the newest, the streamer
+  # output module crashes when the file size goes over
+  # 2 GB. We believe this is related to the system libraries
+  # used for file I/O.  On a new 64 bit machine and compiling
+  # with -m32 option, the streamer output module runs to
+  # completion and creates a 3 GB without crashing.   
+  # 2.  The streamer input module uses 32 bit integers as offsets.
+  # This is in CMS code.  So even with a newer 64 bit machine,
+  # it fails to read files larger than 2 GB.  
   source  = EmptySource {
-    untracked int32 maxEvents = 1270
+   untracked int32 maxEvents = 1270
+   # untracked int32 maxEvents = 2290
   }
 
-  # ~1.5 MB events = 4 bytes x 2500 array elements x 150 arrays
+  # This produces fake data to fill the events.  It is just
+  # vectors full of random numbers.
+  # ~1.5 MB event = 4 bytes x 2500 vector elements x 150 vectors.
+  # Produces 150 branches, which is of order what we expect in data.
+  # The bit mask is 2^24 - 1, this is used to set the top 8 bits
+  # of each array element to zero.  Without use of this bit mask,
+  # the bits are all randomly set.  The reason we care about this
+  # is that we want the data to be smaller after compression
+  # is run.  This is for two reasons.  First, it is more like real
+  # data.  Second, ROOT has a bug that leaks memory badly when the
+  # data does not compress well. Setting these bits to zero allows
+  # enough compression to avoid the bug.  (The ROOT bug exists in
+  # 1_4_0_pre1.  The bug was reported and the claim is that it was fixed
+  # but I do not know when this fix will propagate to a release).
   module prod = StreamThingProducer {
     int32 array_size = 2500
     int32 instance_count = 150
+    untracked bool apply_bit_mask = true
+    untracked uint32 bit_mask = 16777215
   }
+
+  # Set up 50 filter modules, each with its own path.  These
+  # make filter decisions based on 50 independent random
+  # number sequences and an accept rate configured below.
+  # The TriggerResults object created in the event will store
+  # the results of these filter modules.
 
   service = RandomNumberGeneratorService {
 
@@ -193,21 +233,23 @@ process HLT = {
 
     string fileName = "testRandomFilter.dat"
     string indexFileName = "testRandomFilter.ind"
-    // untracked int32 numPerFile = 5
+
+    # I believe the rest of these are not relevant in
+    # an offline job
+    # untracked int32 numPerFile = 5
 
     #string filePath = "/whatever/whatever"
     #string mailboxPath = "/whatever/whatever"
     #string setupLabel = "whatever"
     #string streamLabel = "A"
 
-    #int32 maxSize = 4000000
+    #int32 maxSize = 9000000000
     #double highWaterMark = 0.9
   }
 
   #module outp = PoolOutputModule
   #{
   #  untracked string fileName = "testRandomFilter.root"
-  #  untracked uint32 commitInterval = 10
   #}
 
   endpath o = { out }
