Increase number of events so output files are about 3GB

--- a/test/testRandomFilter.cfg
+++ b/test/testRandomFilter.cfg
@@ -12,26 +12,22 @@ process HLT = {
     untracked bool wantSummary = true
   }
 
-  # ~2.0 GB output file = 1.5 MB per event x 1270 events
-  # The actual output file size is closer to 1.7 GB because
-  # of compression.
-  # Originally we wanted 3 GB files and eventually need to
-  # increase the size to that.
   # ~3.0 GB output file = 1.5 MB events x 2290 events x 0.87,
   # where 0.87 is the compression factor empirically measured
-  # for this fake data.  There are two problems with this.
-  # 1.  On machines that are not the newest, the streamer
+  # for this fake data.  There is a problems with this.
+  # On machines that are not the newest, the streamer
   # output module crashes when the file size goes over
   # 2 GB. We believe this is related to the system libraries
-  # used for file I/O.  On a new 64 bit machine and compiling
+  # used for file I/O.  On a new sl4 64 bit machine and compiling
   # with -m32 option, the streamer output module runs to
-  # completion and creates a 3 GB without crashing.   
-  # 2.  The streamer input module uses 32 bit integers as offsets.
-  # This is in CMS code.  So even with a newer 64 bit machine,
-  # it fails to read files larger than 2 GB.  
+  # completion and creates a 3 GB without crashing.     
   source  = EmptySource {
-   untracked int32 maxEvents = 1270
-   # untracked int32 maxEvents = 2290
+    untracked int32 maxEvents = 2290
+
+    # ~2.0 GB output file = 1.5 MB per event x 1270 events
+    # The actual output file size is closer to 1.7 GB because
+    # of compression.
+    # untracked int32 maxEvents = 1270
   }
 
   # This produces fake data to fill the events.  It is just
