Set maxEvents in the configuration in the new way

--- a/test/testRandomFilter.cfg
+++ b/test/testRandomFilter.cfg
@@ -12,6 +12,8 @@ process HLT = {
     untracked bool wantSummary = true
   }
 
+  source  = EmptySource { }
+
   # ~3.0 GB output file = 1.5 MB events x 2290 events x 0.87,
   # where 0.87 is the compression factor empirically measured
   # for this fake data.  There is a problems with this.
@@ -21,13 +23,13 @@ process HLT = {
   # used for file I/O.  On a new sl4 64 bit machine and compiling
   # with -m32 option, the streamer output module runs to
   # completion and creates a 3 GB without crashing.     
-  source  = EmptySource {
-    untracked int32 maxEvents = 2290
+  untracked PSet maxEvents = {
+    untracked int32 input = 2290
 
     # ~2.0 GB output file = 1.5 MB per event x 1270 events
     # The actual output file size is closer to 1.7 GB because
     # of compression.
-    # untracked int32 maxEvents = 1270
+    # untracked int32 input = 1270
   }
 
   # This produces fake data to fill the events.  It is just
