--- a/test/testRandomService1.cfg
+++ b/test/testRandomService1.cfg
@@ -2,8 +2,10 @@ process TEST1 = {
 
   // The RandomNumberGeneratorService should work
   // with any kind of source
-  source = EmptySource {
-    untracked int32 maxEvents = 5
+  source  = EmptySource { }
+
+  untracked PSet maxEvents = {
+    untracked int32 input = 5
   }
 
   service = RandomNumberGeneratorService {
