--- a/test/testRandomService2.cfg
+++ b/test/testRandomService2.cfg
@@ -13,9 +13,12 @@ process TEST2 = {
     // the third event without wasting time to reprocess the rest.
     // (Alternately, one could strip out this event into a separate
     // file.)
-    untracked int32 maxEvents = 1
     untracked uint32 firstRun = 1
     untracked uint32 firstEvent = 3
+  }
+
+  untracked PSet maxEvents = {
+    untracked int32 input = 1
   }
 
   service = RandomNumberGeneratorService {
