Update .cfg files used to create fake data for repacker tests because the streamer output module interface changed. parameters are now untracked

--- a/test/testRandomFilter.cfg
+++ b/test/testRandomFilter.cfg
@@ -224,25 +224,13 @@ process HLT = {
 
   module out = EventStreamFileWriter
   {
-    int32 max_event_size = 7000000
-    int32 max_queue_depth = 5
-    bool use_compression = true
-    int32 compression_level = 1
+    untracked int32 max_event_size = 7000000
+    untracked bool use_compression = true
+    untracked int32 compression_level = 1
 
-    string fileName = "testRandomFilter.dat"
-    string indexFileName = "testRandomFilter.ind"
+    untracked string fileName = "testRandomFilter.dat"
+    untracked string indexFileName = "testRandomFilter.ind"
 
-    # I believe the rest of these are not relevant in
-    # an offline job
-    # untracked int32 numPerFile = 5
-
-    #string filePath = "/whatever/whatever"
-    #string mailboxPath = "/whatever/whatever"
-    #string setupLabel = "whatever"
-    #string streamLabel = "A"
-
-    #int32 maxSize = 9000000000
-    #double highWaterMark = 0.9
   }
 
   #module outp = PoolOutputModule
