--- a/test/testRandomService3.cfg
+++ b/test/testRandomService3.cfg
@@ -14,9 +14,11 @@ process TEST2 = {
     // (Alternately, one could strip out this event into a separate
     // file.)
     untracked uint32 firstRun = 1
+#   untracked uint32 firstEvent = 3
   }
 
   untracked PSet maxEvents = {
+#   untracked int32 input = 1
     untracked int32 input = 5
   }
 
@@ -38,7 +40,11 @@ process TEST2 = {
     // untracked vuint32 sourceSeedVector = { 7, 11 }
     // untracked string sourceEngine = "RanecuEngine"
 
-    // Tell the service to store the random engine states per event
+    // Tell the service to restore engine states from the
+    // file written by a previous run
+    untracked string restoreFileName = "StashState.data"
+
+    // Tell the service to store the engine states per event
     untracked string saveFileName    = "StashState.data"
 
     // Normally the rest of the parameters for the service will
