Update the Random Number service to include the new mechanism for saving engine states.  This includes two new tests as well.

--- a/test/testRandomService2.cfg
+++ b/test/testRandomService2.cfg
@@ -13,7 +13,8 @@ process TEST2 = {
     // the third event without wasting time to reprocess the rest.
     // (Alternately, one could strip out this event into a separate
     // file.)
-    untracked uint32 firstRun = 1
+    untracked uint32 firstRun   = 1
+    untracked uint32 firstEvent = 3
   }
 
   untracked PSet maxEvents = {
@@ -39,7 +40,7 @@ process TEST2 = {
     // untracked string sourceEngine = "RanecuEngine"
 
     // Tell the service to store the random engine states per event
-    untracked string saveFileName    = "StashState.data"
+#   untracked string saveFileName    = "StashState.data"
 
     // Normally the rest of the parameters for the service will
     // be identical to the previous process (here they are copied
