--- a/test/testRandomService4.cfg
+++ b/test/testRandomService4.cfg
@@ -1,4 +1,4 @@
-process TEST3 = {
+process TEST4 = {
 
   // This is an example of how to restore the random engine states
   // in order to reproduce the sequence of random numbers in all the
@@ -6,10 +6,19 @@ process TEST3 = {
 
   // Use as input a file that contains the stored random engine
   // states.
-  source = EmptySource { }
+  source = PoolSource {
+    untracked vstring fileNames = {"file:testRandomService1.root"}
+
+    // For example, say you are interested in reproducing the process for
+    // the third event without wasting time to reprocess the rest.
+    // (Alternately, one could strip out this event into a separate
+    // file.)
+    untracked uint32 firstRun   = 1
+    untracked uint32 firstEvent = 3
+  }
 
   untracked PSet maxEvents = {
-    untracked int32 input = 5
+    untracked int32 input = 1
   }
 
   service = RandomNumberGeneratorService {
@@ -18,14 +27,6 @@ process TEST3 = {
     // The value is the module label from the previous process
     // of the producer that saved the random engine state
 #   untracked string restoreStateLabel = "randomEngineStateProducer"
-
-    // Tell the service to save engine states to the
-    // names file 
-    untracked string saveFileName = "StashState.data"
-
-    // Tell the service to restore engine states from the
-    // file written by a previous run
-#   untracked string restoreFileName = "StashState.data"
 
     // COMMENT OUT OR DELETE the lines that assign seed(s) to
     // the source.  The ability to restore the state of the
@@ -38,24 +39,47 @@ process TEST3 = {
     // untracked vuint32 sourceSeedVector = { 7, 11 }
     // untracked string sourceEngine = "RanecuEngine"
 
+    // Tell the service to restore engine states from the
+    // file written by a previous run
+    untracked string restoreFileName = "StashState.data"
+
+    // Tell the service to store the engine states per event
+    untracked string saveFileName    = "StashState.data"
+
     // Normally the rest of the parameters for the service will
-    // be identical to the previous process (here they are copied
-    // from testRandomService1.cfg)
-    PSet moduleSeeds = {
-      untracked uint32 t1 = 81
-      untracked uint32 t3 = 83
-      untracked uint32 t4 = 84      
+    // be identical to the previous process. Here we express
+    // all the same engines and seeds as in testRandomService3.cfg
+    // except that they are given in the alternate form.
+    
+    // Default engine to JamesRandom
+    PSet t1 = {
+      untracked uint32 initialSeed = 81
     }
-    PSet moduleSeedVectors = {
-      untracked vuint32 t2 = { 1, 2 }     
+
+    PSet t2 = {
+      untracked string engineName = "RanecuEngine"
+      untracked vuint32 initialSeedSet = { 1, 2 }
     }
-    PSet moduleEngines = {
-      untracked string t2 = "RanecuEngine"
-      untracked string t3 = "TRandom3"
+
+    PSet t3 = {
+      untracked string engineName = "TRandom3"
+      untracked uint32 initialSeed = 83
     }
+
+    // Again default engine to JamesRandom
+    PSet t4 = {
+      untracked uint32 initialSeed = 84
+    }
+
+    // TRandom3 only needs a single seed but we give
+    // a seed set.  The service takes the first entry
+    // and ignores the rest.  Note that there is no 
+    // module with label t5.  Nevertheless, this PSet
+    // needs to be here because it appears in the save 
+    // file from the previous run and this cfg and that
+    // save file must match.
     PSet t5 = {
       untracked string engineName = "TRandom3"
-      untracked uint32 initialSeed = 191
       untracked vuint32 initialSeedSet = { 193, 197 }
     }
   }
