--- a/test/testRandomService1.cfg
+++ b/test/testRandomService1.cfg
@@ -25,7 +25,7 @@ process TEST1 = {
     // untracked vuint32 sourceSeedVector = { 7, 11 }
 
     // Tell the service to save the state of all engines.
-    untracked string saveFileName    = "StashState.data"
+#   untracked string saveFileName    = "StashState.data"
 
     // Optionally, one can specify different types
     // of CLHEP engines.  Currently the only two
