Clean up and extend the tests. As a side effect, this changed the contents of the "benchmark" files in unit_test_outputs.

--- a/test/testRandomService1.cfg
+++ b/test/testRandomService1.cfg
@@ -15,7 +15,7 @@ process TEST1 = {
     // does not, so we do not really need this here)
     // Internally, supplying a seed causes the service
     // to create one engine for the source.
-    untracked uint32 sourceSeed = 181
+#   untracked uint32 sourceSeed = 181
 
     // There is an alternate syntax which can be
     // used to specify the seed instead.  You can
