--- a/test/testRandomService3.cfg
+++ b/test/testRandomService3.cfg
@@ -45,6 +45,7 @@ process TEST3 = {
       untracked uint32 t1 = 81
       untracked uint32 t3 = 83
       untracked uint32 t4 = 84      
+      untracked uint32 t5 = 191
     }
     PSet moduleSeedVectors = {
       untracked vuint32 t2 = { 1, 2 }     
@@ -52,11 +53,7 @@ process TEST3 = {
     PSet moduleEngines = {
       untracked string t2 = "RanecuEngine"
       untracked string t3 = "TRandom3"
-    }
-    PSet t5 = {
-      untracked string engineName = "TRandom3"
-      untracked uint32 initialSeed = 191
-      untracked vuint32 initialSeedSet = { 193, 197 }
+      untracked string t5 = "TRandom3"
     }
   }
 
