--- a/test/testRandomService4.cfg
+++ b/test/testRandomService4.cfg
@@ -44,43 +44,26 @@ process TEST4 = {
     untracked string restoreFileName = "StashState.data"
 
     // Tell the service to store the engine states per event
-    untracked string saveFileName    = "StashState.data"
+#   untracked string saveFileName    = "StashState.data"
 
     // Normally the rest of the parameters for the service will
     // be identical to the previous process. Here we express
     // all the same engines and seeds as in testRandomService3.cfg
     // except that they are given in the alternate form.
     
-    // Default engine to JamesRandom
-    PSet t1 = {
-      untracked uint32 initialSeed = 81
+    PSet moduleSeeds = {
+      untracked uint32 t1 = 81
+      untracked uint32 t3 = 83
+      untracked uint32 t4 = 84      
+      untracked uint32 t5 = 191
     }
-
-    PSet t2 = {
-      untracked string engineName = "RanecuEngine"
-      untracked vuint32 initialSeedSet = { 1, 2 }
+    PSet moduleSeedVectors = {
+      untracked vuint32 t2 = { 1, 2 }     
     }
-
-    PSet t3 = {
-      untracked string engineName = "TRandom3"
-      untracked uint32 initialSeed = 83
-    }
-
-    // Again default engine to JamesRandom
-    PSet t4 = {
-      untracked uint32 initialSeed = 84
-    }
-
-    // TRandom3 only needs a single seed but we give
-    // a seed set.  The service takes the first entry
-    // and ignores the rest.  Note that there is no 
-    // module with label t5.  Nevertheless, this PSet
-    // needs to be here because it appears in the save 
-    // file from the previous run and this cfg and that
-    // save file must match.
-    PSet t5 = {
-      untracked string engineName = "TRandom3"
-      untracked vuint32 initialSeedSet = { 193, 197 }
+    PSet moduleEngines = {
+      untracked string t2 = "RanecuEngine"
+      untracked string t3 = "TRandom3"
+      untracked string t5 = "TRandom3"
     }
   }
 
