Insert the test cfg files for the new format configuration

--- a/test/testRandomService2.cfg
+++ b/test/testRandomService2.cfg
@@ -45,17 +45,23 @@ process TEST2 = {
     // Normally the rest of the parameters for the service will
     // be identical to the previous process (here they are copied
     // from testRandomService1.cfg)
-    PSet moduleSeeds = {
-      untracked uint32 t1 = 81
-      untracked uint32 t3 = 83
-      untracked uint32 t4 = 84      
+
+    PSet t1 = {
+      untracked uint32 initialSeed = 81
     }
-    PSet moduleSeedVectors = {
-      untracked vuint32 t2 = { 1, 2 }     
+
+    PSet t2 = {
+      untracked string engineName = "RanecuEngine"
+      untracked vuint32 initialSeedSet = {1,2}
     }
-    PSet moduleEngines = {
-      untracked string t2 = "RanecuEngine"
-      untracked string t3 = "TRandom3"
+
+    PSet t3 = {
+      untracked uint32 initialSeed = 83
+      untracked string engineName = "TRandom3"
+    }
+
+    PSet t4 = {
+      untracked uint32 initialSeed = 84
     }
   }
 
