--- a/test/testRandomService3.cfg
+++ b/test/testRandomService3.cfg
@@ -34,26 +34,27 @@ process TEST3 = {
     // supplies seeds for the source in the configuration
     // file AND tries to restore the random engine states
     // in the same process.
-    // untracked uint32 sourceSeed = 181
-    // untracked vuint32 sourceSeedVector = { 7, 11 }
-    // untracked string sourceEngine = "RanecuEngine"
 
     // Normally the rest of the parameters for the service will
     // be identical to the previous process (here they are copied
     // from testRandomService1.cfg)
-    PSet moduleSeeds = {
-      untracked uint32 t1 = 81
-      untracked uint32 t3 = 83
-      untracked uint32 t4 = 84      
-      untracked uint32 t5 = 191
+      
+    PSet t1 = {
+      untracked uint32 initialSeed = 81
     }
-    PSet moduleSeedVectors = {
-      untracked vuint32 t2 = { 1, 2 }     
+
+    PSet t2 = {
+      untracked string engineName = "RanecuEngine"
+      untracked vuint32 initialSeedSet = {1,2}
     }
-    PSet moduleEngines = {
-      untracked string t2 = "RanecuEngine"
-      untracked string t3 = "TRandom3"
-      untracked string t5 = "TRandom3"
+
+    PSet t3 = {
+      untracked uint32 initialSeed = 83
+      untracked string engineName = "TRandom3"
+    }
+
+    PSet t4 = {
+      untracked uint32 initialSeed = 84
     }
   }
 
