--- a/test/testRandomService4.cfg
+++ b/test/testRandomService4.cfg
@@ -35,9 +35,6 @@ process TEST4 = {
     // supplies seeds for the source in the configuration
     // file AND tries to restore the random engine states
     // in the same process.
-    // untracked uint32 sourceSeed = 181
-    // untracked vuint32 sourceSeedVector = { 7, 11 }
-    // untracked string sourceEngine = "RanecuEngine"
 
     // Tell the service to restore engine states from the
     // file written by a previous run
@@ -51,19 +48,22 @@ process TEST4 = {
     // all the same engines and seeds as in testRandomService3.cfg
     // except that they are given in the alternate form.
     
-    PSet moduleSeeds = {
-      untracked uint32 t1 = 81
-      untracked uint32 t3 = 83
-      untracked uint32 t4 = 84      
-      untracked uint32 t5 = 191
+    PSet t1 = {
+      untracked uint32 initialSeed = 81
     }
-    PSet moduleSeedVectors = {
-      untracked vuint32 t2 = { 1, 2 }     
+
+    PSet t2 = {
+      untracked string engineName = "RanecuEngine"
+      untracked vuint32 initialSeedSet = {1,2}
     }
-    PSet moduleEngines = {
-      untracked string t2 = "RanecuEngine"
-      untracked string t3 = "TRandom3"
-      untracked string t5 = "TRandom3"
+
+    PSet t3 = {
+      untracked uint32 initialSeed = 83
+      untracked string engineName = "TRandom3"
+    }
+
+    PSet t4 = {
+      untracked uint32 initialSeed = 84
     }
   }
 
