--- a/test/testRandomService1.cfg
+++ b/test/testRandomService1.cfg
@@ -15,48 +15,43 @@ process TEST1 = {
     // does not, so we do not really need this here)
     // Internally, supplying a seed causes the service
     // to create one engine for the source.
-#   untracked uint32 sourceSeed = 181
 
-    // There is an alternate syntax which can be
-    // used to specify the seed instead.  You can
-    // use either syntax but should not use both.
-    // For engines that require more than one seed
-    // this form is required.
-    // untracked vuint32 sourceSeedVector = { 7, 11 }
+    PSet theSource = {
+      untracked vuint32 initialSeedSet = { 7, 11 }
+      untracked string engineName = "RanecuEngine"
+    }
 
     // Tell the service to save the state of all engines.
 #   untracked string saveFileName    = "StashState.data"
 
-    // Optionally, one can specify different types
-    // of CLHEP engines.  Currently the only two
-    // implemented are HepJamesRandom and RanecuEngine.
-    // If you do not specify, you always get HepJamesRandom
-    // by default.  This has no effect unless a seed is also
-    // specified somewhere else.
-    // untracked string sourceEngine = "RanecuEngine"
-
     // HepJamesRandom requires one seed between 0 and 900000000
     // RanecuEngine requires two seeds between 0 and 2147483647
 
-    // Modules are handled in an analogous way.  The only
+    // Modules are handled in an analogous way.  The only 
     // difference being there can be more than one so there
     // is a parameter set to handle each of the three cases.
     // You need to specify seeds for all modules that request
     // random engines from the service (and only those modules
     // unless you want to waste a little CPU and memory).
 
-    PSet moduleSeeds = {
-      untracked uint32 t1 = 81
-      untracked uint32 t3 = 83
-      untracked uint32 t4 = 84      
+    PSet t1 = {
+      untracked uint32 initialSeed = 81
     }
-    PSet moduleSeedVectors = {
-      untracked vuint32 t2 = { 1, 2 }     
+
+    PSet t2 = {
+      untracked string engineName = "RanecuEngine"
+      untracked vuint32 initialSeedSet = {1,2}
     }
-    PSet moduleEngines = {
-      untracked string t2 = "RanecuEngine"
-      untracked string t3 = "TRandom3"
+
+    PSet t3 = {
+      untracked uint32 initialSeed = 83
+      untracked string engineName = "TRandom3"
     }
+
+    PSet t4 = {
+      untracked uint32 initialSeed = 84
+    }
+
   }
 
   module t1 = TestRandomNumberServiceAnalyzer { }
